<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GrasApp</string>
    
    <string name="buttonDone">Finished</string>
    <string name="gras_logo_alttext">GrAs logo</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
	<string name="login_button">Login</string>
    <string name="leader_icon_alt">Leader icon</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Group</string>
    <string name="title_section2">Tasks</string>
    <string name="title_section3">Calendar</string>
      <string name="title_section4">All groups</string>
    <string name="title_section5">No6</string>
    <string name="title_section6">SH</string>
    <string name="title_section7">21W789</string>
    <string name="title_section8">Life</string>
    <string name="hello_world">Hello world!</string>
    <string name="alttext_dishes">Dishes picture</string>
	<string name="defaultTaskName">Task name</string>
    <string name="defaultTaskTime">Task time</string>
    <string name="defaultTaskGroup">Group</string>
    <string name="tasksTitle">Tasks:</string>
	<string name="menu_add">Add task</string>
	<string name="menu_refresh">Refresh</string>
    <string name="emptylist">Contact list empty</string>
    <string name="defaultContactName">Name Surname</string>
    <string name="defaultContactNumber">(123)123 1234</string>
    <string name="taskDetailsGroupLabel">Group: </string>
    <string name="description">Description: Clean all dishes, put food in the fridge, wash sinks, clean tables</string>
    <string name="buttonSwap">Request a swap</string>
    <string name="labelPeoples">People</string>
    <string name="toggle_turn_on">On</string>
      <string name="toggle_turn_off">Off</string>
      <string name="labelRemainders">Reminders</string>
      <string name="Due">Due on:</string>
    
    

    <string name="labelTask">Task</string>
    <string name="labelDate">Time</string>
    <string name="labelPeople">People</string>
    <string name="buttonCreate">Create</string>
    <string name="pick_time">Select time</string>
    <string name="pick_date">Select date</string>
    <string name="labelGroup">Group</string>
    
     <string-array name="groups_array">
        <item>Select group</item>
        <item>No6</item>
        <item>SH</item>
        <item>21W789</item>
    </string-array>
    
     <string-array name="people_array">
        <item>Select Person</item>
        <item>Niki</item>
        <item>Michael</item>
        <item>Alvaro</item>
        <item>WOOWOOOO</item>
    </string-array>
	
</resources>
