<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskassign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TaskAssignent" >

    <TextView
        android:id="@+id/labelGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:text="@string/labelGroup" />

    <LinearLayout
        android:id="@+id/sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelGroup"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/groups_array" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sp"
        android:text="@string/labelTask" />

    <HorizontalScrollView
        android:id="@+id/taskPrototypesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelTask"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/taskPrototypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- radio buttons -->
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/labelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskPrototypesView"
        android:text="@string/labelDate" />

    <LinearLayout
        android:id="@+id/timeDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelDate"
        android:orientation="horizontal"
        android:padding="0dp" >

        <Button
            android:id="@+id/datepick"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:onClick="showDatePickerDialog"
            android:text="@string/pick_date" />

        <Button
            android:id="@+id/timepick"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:onClick="showTimePickerDialog"
            android:text="@string/pick_time" />
    </LinearLayout>

    <!--
    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelDate"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>
    -->


    <!--
          <EditText
        android:id="@+id/editTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@id/labelDate"
		android:layout_toRightOf="@id/editDate"
        android:ems="10"
        android:inputType="time" />
    -->

    <TextView
        android:id="@+id/labelPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeDate"
        android:text="@string/labelPeople" />

    <LinearLayout
        android:id="@+id/taskPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelPeople"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinpeeps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/people_array" />
        <!-- people badges -->
    </LinearLayout>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/buttonCreate" />

</RelativeLayout>